--- a/CustomerRep.ipynb
+++ b/CustomerRep.ipynb
@@ -862,12 +862,12 @@
    "id": "67d81878",
    "metadata": {},
    "source": [
-    "## Lets put everything together "
+    "## Lets put everything together different prompt Technique"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "508191b6",
    "metadata": {},
    "outputs": [
@@ -875,20 +875,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response length: 461 characters\n",
-      "Preview: It seems like you've mentioned \"test_problem,\" but I haven't received enough context to understand w...\n",
+      "Response length: 421 characters\n",
+      "Preview: It looks like you've mentioned \"test_problem,\" but I'm not sure what specific problem or question yo...\n",
       "\n",
-      "Response length: 1461 characters\n",
-      "Preview: Here’s a **test problem** based on the provided **Vacation Policy** example. This problem assesses u...\n",
+      "Response length: 1942 characters\n",
+      "Preview: **Test Problem: Vacation Policy Compliance**\n",
       "\n",
-      "Response length: 504 characters\n",
+      "**Scenario:**  \n",
+      "You are the HR manager at a mid-sized ...\n",
+      "\n",
+      "Response length: 386 characters\n",
       "Preview: Here’s an example of a policy format for **test_problem**:\n",
       "\n",
       "- **test_problem**:  \n",
-      "  1. **Identificat...\n",
+      "  1. **Frequency**...\n",
       "\n",
-      "Response length: 2224 characters\n",
-      "Preview: Here's a step-by-step breakdown to create a remote work policy based on the given problem (`test_pro...\n",
+      "Response length: 2565 characters\n",
+      "Preview: To create a comprehensive remote work policy, let’s address each step systematically based on the pr...\n",
       "\n"
      ]
     }
